--- a/.htaccess
+++ b/.htaccess
@@ -10,3 +10,8 @@ RewriteCond %{REQUEST_FILENAME} !-d
 
 # sinon, on redirige tout vers index.php en passant l'URL dans ?url=
 RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
+
+# on bloque accès aux .env et .sql s'ils sont malencontreusement mis en prod
+<FilesMatch "^(\.env|\.sql)$">
+    Require all denied
+</FilesMatch>
