--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@
 RewriteEngine On
 
 # base de réécriture = racine du site
-RewriteBase /
+RewriteBase /securite-blog-correction/
 
 # si la ressource demandée existe en fichier ou dossier, on la sert directement
 RewriteCond %{REQUEST_FILENAME} !-f
